최최최종본

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">나만의 탭</string>
+    <string name="app_name">베스트핔</string>
     <string name="app_name1">즐겨찾기 이름</string>
     <string name="app_name2">파일 이름</string>
     <string name="add">추가</string>
